--- a/blog/2020-12-20-zero-to-live.mdx
+++ b/blog/2020-12-20-zero-to-live.mdx
@@ -77,7 +77,7 @@ I'm not going to go though the pros and cons of each of these here but they are 
 
 ## Hosting
 
-There are many ways and places to host static sites these days and a lot of terms end up getting thrown around like (CDN)[https://www.cloudflare.com/learning/cdn/what-is-a-cdn/] (or edge server), 🔥🔥<em>blazing fast</em>🔥🔥, (JAMStack)[https://jamstack.org/] or many others when researching in this area, however the big players tend to be:
+There are many ways and places to host static sites these days and a lot of terms end up getting thrown around like [CDN](https://www.cloudflare.com/learning/cdn/what-is-a-cdn/) (or edge server), 🔥🔥<em>blazing fast</em>🔥🔥, [JAMStack](https://jamstack.org/) or many others when researching in this area, however the big players tend to be:
 - [S3 + Cloudfront](https://aws.amazon.com/blogs/networking-and-content-delivery/amazon-s3-amazon-cloudfront-a-match-made-in-the-cloud/)
 - [Netlify](https://www.netlify.com/)
 - [Vercel](https://vercel.com)
