fix spelling mistake

--- a/blog/2020-12-20-zero-to-live.mdx
+++ b/blog/2020-12-20-zero-to-live.mdx
@@ -95,6 +95,6 @@ However, I mostly used this service because I was quickly able to purchase a dom
 
 ## Wrap up
 
-Once getting my initial site up and deployed to Vercel I also added custom styling and the splash page so as to move away from the default style. Also look out for upcoming blogs involving [synthesizers](https://www.youtube.com/watch?v=P_9_ZDpazd4) (specifically an incredible [Moog Minitaur](https://www.moogmusic.com/products/minitaur) that an amazing friend gifted me), [Raspberry Pi(s)](https://www.raspberrypi.org/), trial cams, solar power and e-ink displays
+Once getting my initial site up and deployed to Vercel I also added custom styling and the splash page so as to move away from the default style. Also look out for upcoming blogs involving [synthesizers](https://www.youtube.com/watch?v=P_9_ZDpazd4) (specifically an incredible [Moog Minitaur](https://www.moogmusic.com/products/minitaur) that an amazing friend gifted me), [Raspberry Pi(s)](https://www.raspberrypi.org/), trail cams, solar power and e-ink displays
 
 ...though not necessarily all together and not necessarily in that order.
