--- a/blog/2020-12-20-zero-to-live.mdx
+++ b/blog/2020-12-20-zero-to-live.mdx
@@ -5,7 +5,7 @@ author: Aaron Ross
 author_title: Software Engineer / Web Developer @ EyeCue Lab
 author_url: https://github.com/ashmortar
 author_image_url: https://avatars1.githubusercontent.com/u/33615526?v=4
-description: why to build your next blog with docusaurus instead of gatsby or nextjs
+description: why you should build your next blog with docusaurus instead of gatsby or nextjs
 tags: [blog, hello, docusaurus, nextjs, vercel, netlify, gatsby, ci]
 image: https://docusaurus.io/img/undraw_docusaurus_tree.svg
 ---
