add logseq post and assets

--- a/blog/2020-12-22-electron-jest-typescript.mdx
+++ b/blog/2020-12-22-electron-jest-typescript.mdx
@@ -11,6 +11,8 @@ image: https://docusaurus.io/img/undraw_docusaurus_tree.svg
 draft: true
 ---
 
+<!--truncate-->
+
 ## Test Driven Development
 
 ## Typescript
