--- a/blog/2020-12-21-logseq-journaling.mdx
+++ b/blog/2020-12-21-logseq-journaling.mdx
@@ -12,7 +12,11 @@ image: https://miro.medium.com/max/3868/1*64AZ80NoAO8wH1RVGToSKg.png
 
 Recently I've been trying to get myself organized, and one thing that has been recommended to me time and again is the [bullet journal](https://bulletjournal.com/) method for tracking my daily tasks. Usually though, I can actually keep track of things for a day at a time and I can be rather productive when focused on tasks. My issue lies in connecting things over time:
 
-<img alt="out of sight out of mind" width="100%" src="https://ashmortar.io/img/out_of_sight.jpg" />
+<img
+  alt="out of sight out of mind"
+  width="100%"
+  src="https://ashmortar.io/img/out_of_sight.jpg"
+/>
 
 I needed a something that could help me keep track not just of today's tasks, but help me connect yesterday's tasks with tomorrow's.
 
@@ -38,7 +42,11 @@ Instead of going into too much further detail I'll leave you with some future re
 
 ## Note Taking and Organizing
 
-<img alt="knowledge graph" width="100%" src="https://ashmortar.io/img/knowledge_graph.png" />
+<img
+  alt="knowledge graph"
+  width="100%"
+  src="https://ashmortar.io/img/knowledge_graph.png"
+/>
 
 Ok, so what does any of this have to do with productivity or organizing. Well, I mentioned it at the top, but [Logseq](https://logseq.com) is a note taking and productivity app based on the idea of a [knowledge graph](https://blog.google/products/search/introducing-knowledge-graph-things-not/) and combines it with a bullet journal style (markdown powered) interface to create what they call your _personal knowledge graph_ allowing you to link subjects, notes and individual todo items together into your own (github synced) web note taking app.
 
@@ -49,11 +57,20 @@ Well, if you already started editing your homepage you can spot their [documenta
 ### Overview
 
 When you open logseq for the first time you will see either their demo page, or just a new `Date` named page (journal style) like this one (but with no content):
-<img alt="logseq page with datetime title" width="400px" src="https://ashmortar.io/img/logseq_page.png" />
+
+<img
+  alt="logseq page with datetime title"
+  width="400px"
+  src="https://ashmortar.io/img/logseq_page.png"
+/>
 
 The core functionality lies around making nested `TODO` lists, but you will notice the `[[<some name>]]` syntax on some of my bullet items. This is how you create or reference another page in your knowledge graph. Click on that link (like CBA, my work project) and you'll be taken to that page:
 
-<img alt="logseq page with custom title" width="400px" src="https://ashmortar.io/img/logseq_linked_page.png" />
+<img
+  alt="logseq page with custom title"
+  width="400px"
+  src="https://ashmortar.io/img/logseq_linked_page.png"
+/>
 
 That contains both its own list as well as a `linked references` section that will show you all the other places in your knowledge graph that this page is referenced.
 
@@ -65,7 +82,11 @@ I am so glad you asked. If you open up the hamburger menu on the top right of th
 - `Recents` -- a history of your recently visited pages
 - `Page Graph` -- a visualization of this page (or node) and all its edges and connected nodes:
 
-<img alt="logseq page with custom title and page graph" width="100%" src="https://ashmortar.io/img/page_graph.png" />
+<img
+  alt="logseq page with custom title and page graph"
+  width="100%"
+  src="https://ashmortar.io/img/page_graph.png"
+/>
 
 The reason this feature excites me is that it allows you (once you accrue and link content) to explore relationships between topics that you didn't see before or didn't realize existed. Not to mention that the tasks I did yesterday can now directly be linked to the tasks I need to do tomorrow. I can organize research by topic, throw a link into its category for future reading and mark it with `/TODO` to know that I didn't read it yet and then weeks or months later come back and see that resource, consume it and mark it `/DONE`.
 
