--- a/blog/2020-12-21-logseq-journaling.mdx
+++ b/blog/2020-12-21-logseq-journaling.mdx
@@ -28,7 +28,7 @@ _In steps [logseq](https://logseq.com)_
 
 We are going to take a brief detour to talk about [Graph Databases](https://en.wikipedia.org/wiki/Graph_database). While most people might be familiar with a standard database that structures data into table like structures where each row corresponds to a single entry and each column corresponds to a property, like `name`, `email`, or `last_signed_in`. From here the world opens up by doing things like [joining](<https://en.wikipedia.org/wiki/Join_(SQL)>) tables together and then making advanced selections against the results. This is often called a [Relational Database](https://www.oracle.com/database/what-is-a-relational-database/) and as the name implies they are a really good strategy for storing _relational_ data structures.
 
-While the most common it isn't the only way to structure your relational data. With a graph database the data isn't really the first class citizen, the relationship is. This is borne out two fundamental terms when thinking about graph data where instead of thinking about records, tables and their relations graph databases track `properties`, `nodes` and their `edges`.
+While the most common it isn't the only way to structure your relational data. With a graph database the data isn't really the first class citizen, the relationship is. This is borne out in three fundamental terms when thinking about graph data where instead of thinking about records, tables and their relations graph databases track `properties`, `nodes` and their `edges`.
 
 - **properties**: are comparable to table columns in a relational database and are individual pieces of information associated to nodes
 - **nodes**: are analogous to records but unlike a table record in a relational database a node can have any properties associated that we want
