--- a/blog/2020-12-22-electron-jest-typescript.mdx
+++ b/blog/2020-12-22-electron-jest-typescript.mdx
@@ -29,10 +29,21 @@ There are 2 options, if you have a github account and if you do not, but for bot
 #### Github Users
 
 1. Go the [node-jest-typescript-example](https://github.com/ashmortar/node-jest-typescript-example/tree/set-up)repository and click on the `Use this template` button:
-   <a href="https://github.com/ashmortar/node-jest-typescript-example/tree/set-up"><img width="150px" src="../static/img/github_use_this_template.png" alt="Screenshot of ashmortar/node-jest-typescript-example repository featuring Use this template button"/></a>
+   <a href="https://github.com/ashmortar/node-jest-typescript-example/tree/set-up">
+     <img
+       width="150px"
+       src="../static/img/github_use_this_template.png"
+       alt="Screenshot of ashmortar/node-jest-typescript-example repository featuring Use this template button"
+     />
+   </a>
 2. Enter you repository name and description on the ensuing page:
-   <img src="../static/img/use_template_page.png" alt="screenshot example of github's template page with include all branches option highlighted" />
-   <small><strong>make sure to check `Include all branches`</strong></small>
+   <img
+     src="../static/img/use_template_page.png"
+     alt="screenshot example of github's template page with include all branches option highlighted"
+   />
+   <small>
+     <strong>make sure to check `Include all branches`</strong>
+   </small>
 3. clone your repository to your local machine
 
 ```bash
@@ -185,7 +196,10 @@ export default {
 };
 ```
 
-<small>NOTE: If you are using [VS Code](https://code.visualstudio.com/) you may see your test run in the `jest` section of the `output` tab when you save this file</small>
+<small>
+  NOTE: If you are using [VS Code](https://code.visualstudio.com/) you may see your test
+  run in the `jest` section of the `output` tab when you save this file
+</small>
 
 ## Praise the green check
 
