--- a/blog/2020-12-22-electron-jest-typescript.mdx
+++ b/blog/2020-12-22-electron-jest-typescript.mdx
@@ -32,13 +32,13 @@ There are 2 options, if you have a github account and if you do not, but for bot
    <a href="https://github.com/ashmortar/node-jest-typescript-example/tree/set-up">
      <img
        width="150px"
-       src="../static/img/github_use_this_template.png"
+       src="https://ashmortar.io/img/github_use_this_template.png"
        alt="Screenshot of ashmortar/node-jest-typescript-example repository featuring Use this template button"
      />
    </a>
 2. Enter you repository name and description on the ensuing page:
    <img
-     src="../static/img/use_template_page.png"
+     src="https://ashmortar.io/img/use_template_page.png"
      alt="screenshot example of github's template page with include all branches option highlighted"
    />
    <small>
@@ -205,4 +205,4 @@ export default {
 
 Now we can finally run our test and see that it works with `yarn test` in the base directory and we should get the output with our wonderful green check:
 
-<img src="../static/img/green_test.png" />
+<img src="https://ashmortar.io/img/green_test.png" />
