add keywords for seo and editUrl

--- a/blog/2020-12-20-zero-to-live.mdx
+++ b/blog/2020-12-20-zero-to-live.mdx
@@ -7,6 +7,17 @@ author_url: https://github.com/ashmortar
 author_image_url: https://avatars1.githubusercontent.com/u/33615526?v=4
 description: why you should build your next blog with docusaurus instead of gatsby or nextjs
 tags: [blog, hello, docusaurus, nextjs, vercel, netlify, gatsby, ci]
+keywords:
+  - blog
+  - docusaurus
+  - nextjs
+  - vercel
+  - netlify
+  - gatsby
+  - github
+  - github actions
+  - javascript
+  - jam stack
 image: https://docusaurus.io/img/undraw_docusaurus_tree.svg
 ---
 
