--- a/blog/2020-12-21-logseq-journaling.mdx
+++ b/blog/2020-12-21-logseq-journaling.mdx
@@ -7,6 +7,15 @@ author_url: https://github.com/ashmortar
 author_image_url: https://avatars1.githubusercontent.com/u/33615526?v=4
 description: knowledge-graph note taking for the long run with logseq
 tags: [blog, productivity, logseq, notes, note-taking, graph, knowledge-graph]
+keywords:
+  - blog
+  - productivity
+  - Logseq
+  - notes
+  - note taking
+  - knowledge graph
+  - mind map
+  - graph databases
 image: https://miro.medium.com/max/3868/1*64AZ80NoAO8wH1RVGToSKg.png
 ---
 
