--- a/blog/2020-12-22-electron-jest-typescript.mdx
+++ b/blog/2020-12-22-electron-jest-typescript.mdx
@@ -6,6 +6,14 @@ author_title: Software Engineer / Web Developer @ EyeCue Lab
 author_url: https://github.com/ashmortar
 author_image_url: https://avatars1.githubusercontent.com/u/33615526?v=4
 description: learn how to write node service tests in typescript with jest
+keywords:
+  - jest
+  - typescript
+  - blog
+  - javascript
+  - jam stack
+  - TDD
+  - testing
 tags: [blog, node, typescript, TDD, testing, jest]
 image: https://ms314006.github.io/static/61b2001ca7ff66bffe5604dc0c52016d/5a4bd/Jest.jpg
 ---
