add otpimized image plugin

--- a/blog/2020-12-20-zero-to-live.mdx
+++ b/blog/2020-12-20-zero-to-live.mdx
@@ -18,8 +18,11 @@ keywords:
   - github actions
   - javascript
   - jam stack
-image: https://docusaurus.io/img/undraw_docusaurus_tree.svg
+image: https://v2.docusaurus.io/img/docusaurus-soc.png
 ---
+
+import Image from '@theme/IdealImage';
+import bill from '../static/img/bill_gates.jpeg';
 
 Creating a website/blog and hosting it has never been faster or easier, but with so many options how should one decide? Here are some of my key considerations when creating this site:
 
@@ -31,7 +34,7 @@ Creating a website/blog and hosting it has never been faster or easier, but with
 
 ## Content Creation
 
-![Content is King - Bill Gates](../static/img/bill_gates.jpeg)
+<Image img={bill} min="200" max="2000" steps="5" />
 
 The well known saying attributed to Bill Gates has proven to be quite accurate throughout the ever changing landscape of media and technology over the last 25 (yikes!) years and since the entire point of a blog is the content then this is where design should start.
 
