--- a/blog/2020-12-20-zero-to-live.mdx
+++ b/blog/2020-12-20-zero-to-live.mdx
@@ -34,7 +34,7 @@ Creating a website/blog and hosting it has never been faster or easier, but with
 
 ## Content Creation
 
-<Image img={bill} min="200" max="2000" steps="5" />
+<Image img={bill} min="200px" min="2000px" steps="5" />
 
 The well known saying attributed to Bill Gates has proven to be quite accurate throughout the ever changing landscape of media and technology over the last 25 (yikes!) years and since the entire point of a blog is the content then this is where design should start.
 
