--- a/blog/2020-12-21-logseq-journaling.mdx
+++ b/blog/2020-12-21-logseq-journaling.mdx
@@ -32,8 +32,8 @@ Recently I've been trying to get myself organized, and one thing that has been r
   alt="out of sight out of mind"
   width="100%"
   img={out_of_sight}
-  min="200"
-  max="2000"
+  min="200px"
+  min="2000px"
   steps="5"
 />
 
@@ -65,8 +65,8 @@ Instead of going into too much further detail I'll leave you with some future re
   alt="knowledge graph"
   width="100%"
   img={knowledge_graph}
-  min="200"
-  max="2000"
+  min="200px"
+  min="2000px"
   steps="5"
 />
 
@@ -84,8 +84,8 @@ When you open logseq for the first time you will see either their demo page, or 
   alt="logseq page with datetime title"
   width="100%"
   img={logseq_page}
-  min="200"
-  max="2000"
+  min="200px"
+  min="2000px"
   steps="5"
 />
 
@@ -95,8 +95,8 @@ The core functionality lies around making nested `TODO` lists, but you will noti
   alt="logseq page with custom title"
   width="100%"
   img={logseq_linked_page}
-  min="200"
-  max="2000"
+  min="200px"
+  min="2000px"
   steps="5"
 />
 
@@ -114,8 +114,8 @@ I am so glad you asked. If you open up the hamburger menu on the top right of th
   alt="logseq page with custom title and page graph"
   width="100%"
   img={page_graph}
-  min="200"
-  max="2000"
+  min="200px"
+  min="2000px"
   steps="5"
 />
 
