--- a/blog/2020-12-22-tdd-jest-typescript-node.mdx
+++ b/blog/2020-12-22-tdd-jest-typescript-node.mdx
@@ -48,8 +48,8 @@ There are 2 options, if you have a github account and if you do not, but for bot
        width="150px"
        img={gh_template}
        alt="Screenshot of ashmortar/node-jest-typescript-example repository featuring Use this template button"
-       min="200"
-       max="2000"
+       min="200px"
+       min="2000px"
        steps="5"
      />
    </a>
@@ -59,8 +59,8 @@ There are 2 options, if you have a github account and if you do not, but for bot
    <Image
      img={use_template}
      alt="screenshot example of the github template page with include all branches option highlighted"
-     min="200"
-     max="2000"
+     min="200px"
+     min="2000px"
      steps="5"
    />
    <small>
@@ -234,7 +234,7 @@ Now we can finally run our test and see that it works with `yarn test` in the ba
 <Image
   img={green_test}
   alt="screenshot of terminal output showing successful a successful jest test"
-  min="200"
-  max="2000"
+  min="200px"
+  min="2000px"
   steps="5"
 />
