--- a/blog/2020-12-20-zero-to-live.mdx
+++ b/blog/2020-12-20-zero-to-live.mdx
@@ -2,8 +2,8 @@
 slug: zero-to-live
 title: Zero to Live
 author: Aaron Ross
-author_title: Software Engineer / Web Developer @ EyeCue Lab
-author_url: https://github.com/ashmortar
+author_title: Software Engineer / Web Developer
+author_url: https://ashmortar.io
 author_image_url: https://avatars1.githubusercontent.com/u/33615526?v=4
 description: why you should build your next blog with docusaurus instead of gatsby or nextjs
 tags: [blog, hello, docusaurus, nextjs, vercel, netlify, gatsby, ci]
