--- a/blog/2020-12-22-tdd-jest-typescript-node.mdx
+++ b/blog/2020-12-22-tdd-jest-typescript-node.mdx
@@ -2,7 +2,7 @@
 slug: tdd-jest-typescript-node
 title: TDD with jest and typescript
 author: Aaron Ross
-author_title: Software Engineer / Web Developer @ EyeCue Lab
+author_title: Software Engineer / Web Developer
 author_url: https://github.com/ashmortar
 author_image_url: https://avatars1.githubusercontent.com/u/33615526?v=4
 description: learn how to write node service tests in typescript with jest
@@ -115,7 +115,7 @@ question version (1.0.0):
 question description:
 question entry point (index.js):
 question repository url (https://github.com/ashmortar/node-jest-typescript-example.git):
-question author (Aaron Ross <aaron.ross@eyecuelab.com>):
+question author (Aaron Ross <ashmortar@gmail.com>):
 question license (MIT):
 question private:
 success Saved package.json
