--- a/blog/2020-12-21-logseq-journaling.mdx
+++ b/blog/2020-12-21-logseq-journaling.mdx
@@ -2,7 +2,7 @@
 slug: logseq-note-taking
 title: Knowledge(graph) is Power!
 author: Aaron Ross
-author_title: Software Engineer / Web Developer @ EyeCue Lab
+author_title: Software Engineer / Web Developer
 author_url: https://github.com/ashmortar
 author_image_url: https://avatars1.githubusercontent.com/u/33615526?v=4
 description: knowledge-graph note taking for the long run with logseq
