--- a/blog/2020-12-23-google-lighthouse-audit.mdx
+++ b/blog/2020-12-23-google-lighthouse-audit.mdx
@@ -2,7 +2,7 @@
 slug: google-lighthouse-audits
 title: Google Lighthouse Audit Optimization
 author: Aaron Ross
-author_title: Software Engineer / Web Developer @ EyeCue Lab
+author_title: Software Engineer / Web Developer
 author_url: https://github.com/ashmortar
 author_image_url: https://avatars1.githubusercontent.com/u/33615526?v=4
 description: Optimizing static site performance according to Google Lighthouse scores, or "The only thing better than green check marks are green circles".
